# medical-dictation-summarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/medical_dictation/: __init__.py  cli.py  llm_extractor.py  models.py  streamlit_app.py  transcription.py
tests/: __init__.py  conftest.py  test_models.py
